--- a/render/index.html
+++ b/render/index.html
@@ -12,11 +12,13 @@
 <button id="toggleButton">Toggle</button>
 <div id="slider" >OFF</div>
 </div>
+<div class="folder-container">
+    <h1>parent folder</h1>
+    <p>C:/downloads</p>
+    <button>Pick Folder</button>
+</div>
 <div class="table-container" >
-    <div class="folder-container">
-        <h1>parent folder</h1>
-        <button>Pick Folder</button>
-    </div>
+
 <table>
     <thead>
         <tr>
