--- a/render/index.html
+++ b/render/index.html
@@ -33,7 +33,8 @@
 </div>
 <!-- Add your JavaScript here -->
 
-<script src="scripts/toggle.js"></script>
+<script src="./scripts/toggle.js"></script>
 <script src="./scripts/renderer.js"></script>
+<script src="./scripts/renaming.js"></script>
 </body>
 </html>
