working toggle and console logs of relevant files

--- a/render/index.html
+++ b/render/index.html
@@ -14,8 +14,9 @@
 </div>
 <div class="folder-container">
     <h1>parent folder</h1>
-    <p>C:/downloads</p>
+    <p id="targetFolder">C:/downloads</p>
     <button>Pick Folder</button>
+    <button id="renameButton">rename</button>
 </div>
 <div class="table-container" >
 
