--- a/render/prompt.html
+++ b/render/prompt.html
@@ -2,11 +2,15 @@
 <html>
 <head>
     <title>Enter Variation</title>
-    <!-- Add some basic styling here -->
+    <link href="css/style.css" rel="stylesheet">
+
+
 </head>
 <body>
+<div class="promt-container">
 <input type="text" id="inputField" placeholder="Enter variation name">
 <button id="submitButton">Submit</button>
+</div>
 
 <script src="scripts/promptInput.js"></script>
 
