--- a/render/prompt.html
+++ b/render/prompt.html
@@ -12,7 +12,7 @@
 <button id="submitButton">Submit</button>
 </div>
 
-<script src="scripts/promptInput.js"></script>
+<script src="../scripts/render/promptInput.js"></script>
 
 
 </body>
