working checking table from json file

--- a/render/index.html
+++ b/render/index.html
@@ -42,11 +42,24 @@
 
     </tbody>
 </table>
+    <table>
+    <thead>
+    <tr>
+        <th>Target File</th>
+        <th>Data to check</th>
+        <th>results of check</th>
+    </tr>
+    </thead>
+        <tbody id="table-checking">
+
+        </tbody>
+    </table>
 </div>
 <!-- Add your JavaScript here -->
 
 <script src="../scripts/render/toggle.js"></script>
 <script src="../scripts/render/renderer.js"></script>
 <script src="../scripts/naming/renaming.js"></script>
+<!--<script src="../scripts/automatedCompliance/checkingTable.js"></script>-->
 </body>
 </html>
