--- a/render/index.html
+++ b/render/index.html
@@ -18,6 +18,7 @@
 <div id="slider" >OFF</div>
 </div>
 <div class="table-container" >
+        <h1>version 1.0.1</h1>
 
 <table>
     <td>Folder to Scan</td>
