--- a/render/index.html
+++ b/render/index.html
@@ -9,13 +9,7 @@
 </head>
 <body>
 <div class="status-bar">
-<button id="toggleButton">Toggle</button>
-    <select id="profileSelect">
-        <option value="chromagen">chromagen</option>
-        <option value="aircon">aircon</option>
-        <option value="solar">solar</option>
-    </select>
-<div id="slider" >OFF</div>
+<button id="start-app">Organise!</button>
 </div>
 <div class="table-container" >
 
