--- a/render/index.html
+++ b/render/index.html
@@ -12,7 +12,7 @@
 <button id="start-app">Organise!</button>
 </div>
 <div class="table-container" >
-        <h1>version 1.0.1</h1>
+
 
 <table>
     <td>Folder to Scan</td>
@@ -24,8 +24,8 @@
 </table>
 </div>
 <div class="table-container" >
-
-<table>
+    <h1 id="rename-header">Re-name</h1>
+<table id="files-table">
     <thead>
         <tr>
             <th>Target Name</th>
@@ -44,6 +44,7 @@
 <script src="../scripts/render/toggle.js"></script>
 <script src="../scripts/render/renderer.js"></script>
 <script src="../scripts/naming/renaming.js"></script>
+<script src="../scripts/render/tableToggle.js"></script>
 
 </body>
 </html>
