working delete table rendering

--- a/render/index.html
+++ b/render/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Electron App</title>
+    <title>🫂CSO file buddy🫂</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <!-- Add your CSS here -->
 </head>
 <body>
 <div class="status-bar">
@@ -24,7 +23,7 @@
 </table>
 </div>
 <div class="table-container" >
-    <h1 id="rename-header">Re-name</h1>
+    <h1 id="rename-header">Rename:</h1>
 <table id="files-table">
     <thead>
         <tr>
@@ -37,6 +36,19 @@
 
     </tbody>
 </table>
+    <h1 id="delete">Delete:</h1>
+    <table id="delete-table">
+        <thead>
+        <tr>
+            <th>Target Name</th>
+            <th>Variations</th>
+            <th>actions</th>
+        </tr>
+        </thead>
+        <tbody id="delete-table-body">
+
+        </tbody>
+    </table>
 
 </div>
 <!-- Add your JavaScript here -->
