mvp demo working

--- a/render/index.html
+++ b/render/index.html
@@ -36,7 +36,7 @@
 
     </tbody>
 </table>
-    <h1 id="delete">Delete:</h1>
+    <h1 id="delete-header">Delete:</h1>
     <table id="delete-table">
         <thead>
         <tr>
