--- a/render/index.html
+++ b/render/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="status-bar">
 <button id="start-app">Organise!</button>
+    <button id="update-app">update</button>
 </div>
 <div class="table-container" >
 
