--- a/render/prompt.html
+++ b/render/prompt.html
@@ -10,7 +10,7 @@
 <div class="promt-container">
 <input type="text" id="inputField" placeholder="Enter variation name">
 <button id="submitButton">Submit</button>
-</div>
+</div>~
 
 <script src="../scripts/render/promptInput.js"></script>
 
