some interactive css

--- a/render/index.html
+++ b/render/index.html
@@ -15,7 +15,7 @@
 </div>
 <div class="table-container" >
     <div id="feedback-container" class="feedback-container">
-        <span id="feedback-icon" class="feedback-icon">🔧</span>
+        <span id="feedback-icon" class="feedback-icon"></span>
     </div>
 
 
