--- a/render/index.html
+++ b/render/index.html
@@ -42,6 +42,7 @@
 
     </tbody>
 </table>
+    <div id="delete-table-container">
     <h1 id="delete-header">Delete:</h1>
     <table id="delete-table">
         <thead>
@@ -55,7 +56,7 @@
 
         </tbody>
     </table>
-
+    </div>
 </div>
 <!-- Add your JavaScript here -->
 
