UI interactions fixed for folder picker button

--- a/render/index.html
+++ b/render/index.html
@@ -11,7 +11,7 @@
 <div class="status-bar">
     <button id="start-app">Organise!</button>
     <button id="update-app">update</button>
-    <button id="guide-app">user guide</button>
+<!--    <button id="guide-app">user guide</button>-->
 </div>
 <div class="table-container" >
     <div id="feedback-container" class="feedback-container">
